<resources>
    <string name="app_name">Support Meditation</string>
    <string name="title_activity_main">Support Meditation</string>
    <string name="title_config_list">Buổi thiền của bạn</string>
    <string name="title_config_editor">Chỉnh sửa buổi thiền</string>
    <string name="title_stage_editor">Chỉnh sửa giai đoạn</string>
    <string name="title_select_sound">Chọn âm thanh</string>
    <string name="title_sound_library">Thư viện âm thanh</string>
    <string name="title_settings">Cài đặt</string>
    <string name="title_meditation_timer">Thiền</string>
    <string name="title_guide">Hướng dẫn</string>
    <string name="action_add_config">Thêm</string>
    <string name="action_add_stage">Thêm giai đoạn</string>
    <string name="action_save">Lưu</string>
    <string name="action_cancel">Huỷ</string>
    <string name="label_total_minutes">Tổng thời gian (phút)</string>
    <string name="label_stage_minutes">Thời lượng (phút)</string>
    <string name="label_stage_repeat">Lặp lại mỗi (phút)</string>
    <string name="label_selected_sounds">Âm thanh đã chọn</string>
    <string name="content_description_clear_sounds">Xoá mọi âm thanh đã chọn</string>
    <string name="button_preview_sound">Nghe thử</string>
    <string name="button_preview_sound_playing">Đang phát: %1$s</string>
    <string name="label_select_sound_action">Chọn âm thanh…</string>
    <string name="label_sound_library_empty">Chưa có âm thanh. Hãy thêm mới.</string>
    <string name="label_stage_repeat_single">Chỉ phát 1 lần</string>
    <string name="label_stage_repeat_every">Lặp mỗi %1$d phút</string>
    <string name="label_stage_count">%1$d giai đoạn</string>
    <string name="label_sound_count">%1$d âm thanh</string>
    <string name="label_minutes_suffix">%1$d phút</string>
    <string name="menu_sound_library">Thư viện âm thanh</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="menu_edit">Chỉnh sửa</string>
    <string name="menu_delete">Xoá</string>
    <string name="button_edit">Chỉnh sửa</string>
    <string name="button_start">Start</string>
    <string name="button_cancel">Huỷ</string>
    <string name="button_done">Xong</string>
    <string name="button_delete_selected">Xoá đã chọn</string>
    <string name="settings_vibration">Độ rung</string>
    <string name="settings_vibration_value">Độ rung: %1$d%%</string>
    <string name="settings_sound">Âm thanh</string>
    <string name="settings_screen_brightness">Độ sáng màn hình khi thiền</string>
    <string name="settings_screen_brightness_value">Độ sáng: %1$d%%</string>
    <string name="settings_default_sound">Âm thanh mặc định</string>
    <string name="timer_stage_label">Giai đoạn: %1$s</string>
    <string name="timer_remaining">Thời gian còn lại</string>
    <string name="sound_library_title_selection">Chọn âm thanh từ thư mục làm việc</string>
    <string name="dialog_select_sound_empty">Không có file âm thanh. Vào Thư viện âm thanh để thêm.</string>
    <string name="label_stage_placeholder">Giai đoạn không tên</string>
    <string name="hint_config_name">Tên buổi thiền</string>
    <string name="hint_stage_label">Nhãn giai đoạn (tuỳ chọn)</string>
    <string name="mock_selected_config">Thiền buổi sáng</string>
    <string name="label_config_name">Tên buổi thiền</string>
    <string name="label_stage_name">Tên giai đoạn</string>
    <string name="label_selected_sound_count">%1$d âm thanh đã chọn</string>
    <string name="warning_stage_total_exceed">Tổng thời gian giai đoạn vượt quá %1$d phút</string>
    <string name="hint_repeat_zero">0 = chỉ phát 1 lần</string>
    <string name="library_empty_message">Chưa có file âm thanh trong thư mục.</string>
    <string name="library_add">Thêm</string>
    <string name="library_select_mode">Chọn</string>
     <string name="library_select_cancel">Huỷ</string>
    <string name="library_selection_count">Đã chọn %1$d file</string>
    <string name="dialog_select_sound_title">Chọn âm thanh</string>
    <string name="settings_sound_toggle">Bật âm thanh</string>
    <string name="home_empty_message">Chưa có buổi thiền nào. Nhấn "Thêm buổi thiền" để bắt đầu.</string>
    <string name="dialog_add_config_title">Tạo buổi thiền</string>
    <string name="dialog_add_config_hint">Tên buổi thiền</string>
    <string name="dialog_add_config_positive">Tạo</string>
    <string name="home_config_added">Đã thêm buổi thiền "%1$s"</string>
    <string name="home_config_deleted">Đã xoá buổi thiền "%1$s"</string>
    <string name="home_delete_title">Xoá buổi thiền</string>
    <string name="home_delete_message">Bạn có chắc muốn xoá "%1$s"?</string>
    <string name="library_add_title">Thêm âm thanh</string>
    <string name="library_add_hint">Tên file (ví dụ: tieng_mua.mp3)</string>
    <string name="library_add_error">Vui lòng nhập tên file hợp lệ</string>
    <string name="library_added_message">Đã thêm "%1$s"</string>
    <string name="library_import_error">Không thể thêm file âm thanh. Vui lòng thử lại.</string>
    <string name="library_delete_title">Xoá âm thanh</string>
    <string name="library_delete_message">Xoá %1$d file đã chọn?</string>
    <string name="library_deleted_message">Đã xoá %1$d file</string>
    <string name="library_delete_partial_error">Một số file không thể xoá.</string>
    <string name="library_delete_in_use_warning">Một số file đang được sử dụng trong buổi thiền: %1$s</string>
    <string name="library_saf_hint">Chọn file âm thanh từ thiết bị của bạn</string>
    <string name="select_sound_no_options">Chưa có âm thanh khả dụng</string>
    <string name="settings_saved_message">Đã lưu cài đặt mặc định</string>
    <string name="error_save_config">Không thể lưu buổi thiền. Vui lòng thử lại.</string>
    <string name="error_stage_minutes">Thời lượng phải trong khoảng %1$d – %2$d phút</string>
    <string name="error_stage_repeat">Lặp lại phải trong khoảng 0 – %1$d phút</string>
    <string name="timer_stage_counter">Giai đoạn %1$d/%2$d</string>
    <string name="timer_next_stage">Tiếp theo: %1$s</string>
    <string name="timer_completed_summary">Hoàn thành %1$d/%2$d giai đoạn</string>
    <string name="timer_total_elapsed">Tổng thời gian: %1$s</string>
    <string name="timer_missing_sound">Không tìm thấy file âm thanh "%1$s"</string>
    <string name="timer_session_stopped">Buổi thiền dừng ở %1$d/%2$d giai đoạn</string>
    <string name="timer_pause">Tạm dừng</string>
    <string name="timer_resume">Tiếp tục</string>
    <string name="timer_stop">Dừng</string>
    <string name="timer_toggle_sound">Âm thanh</string>
    <string name="timer_toggle_vibration">Rung</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="edit">Edit</string>
    <string name="tab_home">Home</string>
    <string name="tab_media">Media</string>
    <string name="tab_guide">Hướng dẫn</string>
</resources>